chore: add final changes from helm-envs branch

--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
       - 'charts/portal/**'
-    branches: [main, helm-environments, release-candidate]
+    branches: [main, dev, release-candidate]
   pull_request:
     paths:
       - 'charts/portal/**'
