--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -20,7 +20,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ .Values.backend.checklistworker.name }}
+  name: {{ .Values.backend.processesworker.name }}
 spec:
   schedule: "*/5 * * * *"
   concurrencyPolicy: Forbid
@@ -30,10 +30,10 @@ spec:
         spec:
           restartPolicy: OnFailure
           containers:
-          - name: {{ .Values.backend.checklistworker.name }}
+          - name: {{ .Values.backend.processesworker.name }}
             securityContext:
               {{- toYaml .Values.securityContext | nindent 16 }}
-            image: "{{ .Values.backend.checklistworker.image.name }}:{{ .Values.backend.checklistworker.image.checklistworkertag | default .Chart.AppVersion }}"
+            image: "{{ .Values.backend.processesworker.image.name }}:{{ .Values.backend.processesworker.image.processesworkertag | default .Chart.AppVersion }}"
             imagePullPolicy: "Always"
             env:
             {{- if .Values.postgresql.enabled }}
@@ -69,104 +69,104 @@ spec:
               value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
             {{- end }}
             - name: "APPLICATIONACTIVATION__APPLICATIONAPPROVALINITIALROLES__Cl2-CX-Portal__0"
-              value: "{{ .Values.backend.checklistworker.applicationActivation.applicationApprovalInitialRoles.portal.role0 }}"
+              value: "{{ .Values.backend.processesworker.applicationActivation.applicationApprovalInitialRoles.portal.role0 }}"
             - name: "APPLICATIONACTIVATION__CLIENTTOREMOVEROLESONACTIVATION__0"
-              value: "{{ .Values.backend.checklistworker.applicationActivation.clientToRemoveRolesOnActivation.client0 }}"
+              value: "{{ .Values.backend.processesworker.applicationActivation.clientToRemoveRolesOnActivation.client0 }}"
             - name: "APPLICATIONACTIVATION__BASEPORTALADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
             - name: "APPLICATIONACTIVATION__COMPANYADMINROLES__Cl1-CX-Registration__0"
-              value: "{{ .Values.backend.checklistworker.applicationActivation.applicationApprovalInitialRoles.registration.role0 }}"
+              value: "{{ .Values.backend.processesworker.applicationActivation.applicationApprovalInitialRoles.registration.role0 }}"
             - name: "APPLICATIONACTIVATION__WELCOMENOTIFICATIONTYPEIDS__0"
-              value: "{{ .Values.backend.checklistworker.applicationActivation.welcomeNotificationTypeIds.type0 }}"
+              value: "{{ .Values.backend.processesworker.applicationActivation.welcomeNotificationTypeIds.type0 }}"
             - name: "APPLICATIONACTIVATION__WELCOMENOTIFICATIONTYPEIDS__1"
-              value: "{{ .Values.backend.checklistworker.applicationActivation.welcomeNotificationTypeIds.type1 }}"
+              value: "{{ .Values.backend.processesworker.applicationActivation.welcomeNotificationTypeIds.type1 }}"
             - name: "APPLICATIONACTIVATION__WELCOMENOTIFICATIONTYPEIDS__2"
-              value: "{{ .Values.backend.checklistworker.applicationActivation.welcomeNotificationTypeIds.type2 }}"
+              value: "{{ .Values.backend.processesworker.applicationActivation.welcomeNotificationTypeIds.type2 }}"
             - name: "APPLICATIONACTIVATION__WELCOMENOTIFICATIONTYPEIDS__3"
-              value: "{{ .Values.backend.checklistworker.applicationActivation.welcomeNotificationTypeIds.type3 }}"
+              value: "{{ .Values.backend.processesworker.applicationActivation.welcomeNotificationTypeIds.type3 }}"
             - name: "APPLICATIONACTIVATION__WELCOMENOTIFICATIONTYPEIDS__4"
-              value: "{{ .Values.backend.checklistworker.applicationActivation.welcomeNotificationTypeIds.type4 }}"
+              value: "{{ .Values.backend.processesworker.applicationActivation.welcomeNotificationTypeIds.type4 }}"
             - name: "APPLICATIONACTIVATION__LOGINTHEME"
-              value: "{{ .Values.backend.checklistworker.applicationActivation.loginTheme }}"
-            - name: "CHECKLIST__BPDM__BASEADDRESS"
+              value: "{{ .Values.backend.processesworker.applicationActivation.loginTheme }}"
+            - name: "APPLICATIONCHECKLIST__BPDM__BASEADDRESS"
               value: "{{ .Values.bpdmPortalGateAddress }}"
-            - name: "CHECKLIST__BPDM__CLIENTID"
-              value: "{{ .Values.backend.checklistworker.bpdm.clientId }}"
-            - name: "CHECKLIST__BPDM__CLIENTSECRET"
+            - name: "APPLICATIONCHECKLIST__BPDM__CLIENTID"
+              value: "{{ .Values.backend.processesworker.bpdm.clientId }}"
+            - name: "APPLICATIONCHECKLIST__BPDM__CLIENTSECRET"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
                   key: "bpdm-client-secret"
-            - name: "CHECKLIST__BPDM__GRANTTYPE"
-              value: "{{ .Values.backend.checklistworker.bpdm.grantType }}"
-            - name: "CHECKLIST__BPDM__KEYCLOAKTOKENADDRESS"
+            - name: "APPLICATIONCHECKLIST__BPDM__GRANTTYPE"
+              value: "{{ .Values.backend.processesworker.bpdm.grantType }}"
+            - name: "APPLICATIONCHECKLIST__BPDM__KEYCLOAKTOKENADDRESS"
               value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
-            - name: "CHECKLIST__BPDM__PASSWORD"
+            - name: "APPLICATIONCHECKLIST__BPDM__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "CHECKLIST__BPDM__SCOPE"
-              value: "{{ .Values.backend.checklistworker.bpdm.scope }}"
-            - name: "CHECKLIST__BPDM__USERNAME"
+            - name: "APPLICATIONCHECKLIST__BPDM__SCOPE"
+              value: "{{ .Values.backend.processesworker.bpdm.scope }}"
+            - name: "APPLICATIONCHECKLIST__BPDM__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "CHECKLIST__CLEARINGHOUSE__BASEADDRESS"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__BASEADDRESS"
               value: "{{ .Values.clearinghouseAddress }}"
-            - name: "CHECKLIST__CLEARINGHOUSE__CLIENTID"
-              value: "{{ .Values.backend.checklistworker.clearinghouse.clientId }}"
-            - name: "CHECKLIST__CLEARINGHOUSE__CLIENTSECRET"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTID"
+              value: "{{ .Values.backend.processesworker.clearinghouse.clientId }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTSECRET"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
                   key: "clearinghouse-client-secret"
-            - name: "CHECKLIST__CLEARINGHOUSE__GRANTTYPE"
-              value: "{{ .Values.backend.checklistworker.clearinghouse.grantType }}"
-            - name: "CHECKLIST__CLEARINGHOUSE__KEYCLOAKTOKENADDRESS"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__GRANTTYPE"
+              value: "{{ .Values.backend.processesworker.clearinghouse.grantType }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__KEYCLOAKTOKENADDRESS"
               value: "{{ .Values.clearinghouseTokenAddress }}"
-            - name: "CHECKLIST__CLEARINGHOUSE__PASSWORD"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "CHECKLIST__CLEARINGHOUSE__SCOPE"
-              value: "{{ .Values.backend.checklistworker.clearinghouse.scope }}"
-            - name: "CHECKLIST__CLEARINGHOUSE__USERNAME"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__SCOPE"
+              value: "{{ .Values.backend.processesworker.clearinghouse.scope }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "CHECKLIST__CLEARINGHOUSE__CALLBACKURL"
-              value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.checklistworker.clearinghouse.callbackPath }}"
-            - name: "CHECKLIST__CUSTODIAN__BASEADDRESS"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CALLBACKURL"
+              value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"
+            - name: "APPLICATIONCHECKLIST__CUSTODIAN__BASEADDRESS"
               value: "{{ .Values.custodianAddress }}"
-            - name: "CHECKLIST__CUSTODIAN__CLIENTID"
-              value: "{{ .Values.backend.checklistworker.custodian.clientId }}"
-            - name: "CHECKLIST__CUSTODIAN__CLIENTSECRET"
+            - name: "APPLICATIONCHECKLIST__CUSTODIAN__CLIENTID"
+              value: "{{ .Values.backend.processesworker.custodian.clientId }}"
+            - name: "APPLICATIONCHECKLIST__CUSTODIAN__CLIENTSECRET"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
                   key: "custodian-client-secret"
-            - name: "CHECKLIST__CUSTODIAN__GRANTTYPE"
-              value: "{{ .Values.backend.checklistworker.custodian.grantType }}"
-            - name: "CHECKLIST__CUSTODIAN__KEYCLOAKTOKENADDRESS"
+            - name: "APPLICATIONCHECKLIST__CUSTODIAN__GRANTTYPE"
+              value: "{{ .Values.backend.processesworker.custodian.grantType }}"
+            - name: "APPLICATIONCHECKLIST__CUSTODIAN__KEYCLOAKTOKENADDRESS"
               value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
-            - name: "CHECKLIST__CUSTODIAN__PASSWORD"
+            - name: "APPLICATIONCHECKLIST__CUSTODIAN__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "CHECKLIST__CUSTODIAN__SCOPE"
-              value: "{{ .Values.backend.checklistworker.custodian.scope }}"
-            - name: "CHECKLIST__CUSTODIAN__USERNAME"
+            - name: "APPLICATIONCHECKLIST__CUSTODIAN__SCOPE"
+              value: "{{ .Values.backend.processesworker.custodian.scope }}"
+            - name: "APPLICATIONCHECKLIST__CUSTODIAN__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "CHECKLIST__SDFACTORY__CLIENTID"
-              value: "{{ .Values.backend.checklistworker.sdfactory.clientId }}"
-            - name: "CHECKLIST__SDFACTORY__CLIENTSECRET"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__CLIENTID"
+              value: "{{ .Values.backend.processesworker.sdfactory.clientId }}"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__CLIENTSECRET"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
                   key: "sdfactory-client-secret"
-            - name: "CHECKLIST__SDFACTORY__GRANTTYPE"
-              value: "{{ .Values.backend.checklistworker.sdfactory.grantType }}"
-            - name: "CHECKLIST__SDFACTORY__KEYCLOAKTOKENADDRESS"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__GRANTTYPE"
+              value: "{{ .Values.backend.processesworker.sdfactory.grantType }}"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__KEYCLOAKTOKENADDRESS"
               value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
-            - name: "CHECKLIST__SDFACTORY__PASSWORD"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "CHECKLIST__SDFACTORY__SCOPE"
-              value: "{{ .Values.backend.checklistworker.sdfactory.scope }}"
-            - name: "CHECKLIST__SDFACTORY__SDFACTORYISSUERBPN"
-              value: "{{ .Values.backend.checklistworker.sdfactory.issuerBpn }}"
-            - name: "CHECKLIST__SDFACTORY__SDFACTORYURL"
-              value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.checklistworker.sdfactory.selfdescriptionPath }}"
-            - name: "CHECKLIST__SDFACTORY__USERNAME"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__SCOPE"
+              value: "{{ .Values.backend.processesworker.sdfactory.scope }}"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__SDFACTORYISSUERBPN"
+              value: "{{ .Values.backend.processesworker.sdfactory.issuerBpn }}"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__SDFACTORYURL"
+              value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.processesworker.sdfactory.selfdescriptionPath }}"
+            - name: "APPLICATIONCHECKLIST__SDFACTORY__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
             - name: "KEYCLOAK__CENTRAL__AUTHREALM"
               value: "{{ .Values.backend.keycloak.central.authRealm }}"
@@ -190,16 +190,16 @@ spec:
                   key: "shared-client-secret"
             - name: "KEYCLOAK__SHARED__CONNECTIONSTRING"
               value: "{{ .Values.sharedidpAddress }}"
-            - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.CHECKLIST.LIBRARY"
-              value: "{{ .Values.backend.checklistworker.logging.checklistLibrary }}"
+            - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.PROCESSES.LIBRARY"
+              value: "{{ .Values.backend.processesworker.logging.checklistLibrary }}"
             - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.BPDM.LIBRARY"
-              value: "{{ .Values.backend.checklistworker.logging.bpdmLibrary }}"
+              value: "{{ .Values.backend.processesworker.logging.bpdmLibrary }}"
             - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.CLEARINGHOUSE.LIBRARY"
-              value: "{{ .Values.backend.checklistworker.logging.clearinghouseLibrary }}"
+              value: "{{ .Values.backend.processesworker.logging.clearinghouseLibrary }}"
             - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.CUSTODIAN.LIBRARY"
-              value: "{{ .Values.backend.checklistworker.logging.custodianLibrary }}"
+              value: "{{ .Values.backend.processesworker.logging.custodianLibrary }}"
             - name: "LOGGING__LOGLEVEL__ORG.ECLIPSE.TRACTUSX.PORTAL.BACKEND.SDFACTORY.LIBRARY"
-              value: "{{ .Values.backend.checklistworker.logging.sdfactoryLibrary }}"
+              value: "{{ .Values.backend.processesworker.logging.sdfactoryLibrary }}"
             - name: "MAILINGSERVICE__MAIL__SMTPHOST"
               value: "{{ .Values.backend.mailing.host }}"
             - name: "MAILINGSERVICE__MAIL__SMTPPASSWORD"
@@ -212,7 +212,7 @@ spec:
             - name: "MAILINGSERVICE__MAIL__SMTPUSER"
               value: "{{ .Values.backend.mailing.user }}"
             - name: "PROCESSES__LOCKEXPIRYSECONDS"
-              value: "{{ .Values.backend.checklistworker.processes.lockExpirySeconds }}"
+              value: "{{ .Values.backend.processesworker.processes.lockExpirySeconds }}"
             - name: "PROVISIONING__CENTRALIDENTITYPROVIDER__CONFIG__CLIENTID"
               value: "{{ .Values.backend.provisioning.centralIdentityProvider.clientId }}"
             - name: "PROVISIONING__CENTRALREALM"
