--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -87,85 +87,85 @@ spec:
           value: "Server={{ .Values.backend.keycloak.central.dbConnection.host }};Database={{ .Values.backend.keycloak.central.dbConnection.database }};Port={{ .Values.backend.keycloak.central.dbConnection.port }};User Id={{ .Values.backend.keycloak.central.dbConnection.user }};Password=$(KEYCLOAK_CENTRAL_PASSWORD);Ssl Mode={{ .Values.backend.keycloak.central.dbConnection.sslMode }};"
         - name: "DATABASEACCESS__KEYCLOAK__DATABASESCHEMA"
           value: "{{ .Values.backend.keycloak.central.dbConnection.schema }}"
-        - name: "CHECKLIST__BPDM__BASEADDRESS"
+        - name: "APPLICATIONCHECKLIST__BPDM__BASEADDRESS"
           value: "{{ .Values.bpdmPortalGateAddress }}"
-        - name: "CHECKLIST__BPDM__CLIENTID"
-          value: "{{ .Values.backend.checklistworker.bpdm.clientId }}"
-        - name: "CHECKLIST__BPDM__CLIENTSECRET"
+        - name: "APPLICATIONCHECKLIST__BPDM__CLIENTID"
+          value: "{{ .Values.backend.processesworker.bpdm.clientId }}"
+        - name: "APPLICATIONCHECKLIST__BPDM__CLIENTSECRET"
           valueFrom:
             secretKeyRef:
               name: "{{ .Values.backend.interfaces.secret }}"
               key: "bpdm-client-secret"
-        - name: "CHECKLIST__BPDM__GRANTTYPE"
-          value: "{{ .Values.backend.checklistworker.bpdm.grantType }}"
-        - name: "CHECKLIST__BPDM__KEYCLOAKTOKENADDRESS"
+        - name: "APPLICATIONCHECKLIST__BPDM__GRANTTYPE"
+          value: "{{ .Values.backend.processesworker.bpdm.grantType }}"
+        - name: "APPLICATIONCHECKLIST__BPDM__KEYCLOAKTOKENADDRESS"
           value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
-        - name: "CHECKLIST__BPDM__PASSWORD"
+        - name: "APPLICATIONCHECKLIST__BPDM__PASSWORD"
           value: "{{ .Values.backend.placeholder }}"
-        - name: "CHECKLIST__BPDM__SCOPE"
-          value: "{{ .Values.backend.checklistworker.bpdm.scope }}"
-        - name: "CHECKLIST__BPDM__USERNAME"
+        - name: "APPLICATIONCHECKLIST__BPDM__SCOPE"
+          value: "{{ .Values.backend.processesworker.bpdm.scope }}"
+        - name: "APPLICATIONCHECKLIST__BPDM__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
-        - name: "CHECKLIST__CLEARINGHOUSE__BASEADDRESS"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__BASEADDRESS"
           value: "{{ .Values.clearinghouseAddress }}"
-        - name: "CHECKLIST__CLEARINGHOUSE__CLIENTID"
-          value: "{{ .Values.backend.checklistworker.clearinghouse.clientId }}"
-        - name: "CHECKLIST__CLEARINGHOUSE__CLIENTSECRET"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTID"
+          value: "{{ .Values.backend.processesworker.clearinghouse.clientId }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTSECRET"
           valueFrom:
             secretKeyRef:
               name: "{{ .Values.backend.interfaces.secret }}"
               key: "clearinghouse-client-secret"
-        - name: "CHECKLIST__CLEARINGHOUSE__GRANTTYPE"
-          value: "{{ .Values.backend.checklistworker.clearinghouse.grantType }}"
-        - name: "CHECKLIST__CLEARINGHOUSE__KEYCLOAKTOKENADDRESS"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__GRANTTYPE"
+          value: "{{ .Values.backend.processesworker.clearinghouse.grantType }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__KEYCLOAKTOKENADDRESS"
           value: "{{ .Values.clearinghouseTokenAddress }}"
-        - name: "CHECKLIST__CLEARINGHOUSE__PASSWORD"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__PASSWORD"
           value: "{{ .Values.backend.placeholder }}"
-        - name: "CHECKLIST__CLEARINGHOUSE__SCOPE"
-          value: "{{ .Values.backend.checklistworker.clearinghouse.scope }}"
-        - name: "CHECKLIST__CLEARINGHOUSE__USERNAME"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__SCOPE"
+          value: "{{ .Values.backend.processesworker.clearinghouse.scope }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
-        - name: "CHECKLIST__CLEARINGHOUSE__CALLBACKURL"
-          value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.checklistworker.clearinghouse.callbackPath }}"
-        - name: "CHECKLIST__CUSTODIAN__BASEADDRESS"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CALLBACKURL"
+          value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"
+        - name: "APPLICATIONCHECKLIST__CUSTODIAN__BASEADDRESS"
           value: "{{ .Values.custodianAddress }}"
-        - name: "CHECKLIST__CUSTODIAN__CLIENTID"
-          value: "{{ .Values.backend.checklistworker.custodian.clientId }}"
-        - name: "CHECKLIST__CUSTODIAN__CLIENTSECRET"
+        - name: "APPLICATIONCHECKLIST__CUSTODIAN__CLIENTID"
+          value: "{{ .Values.backend.processesworker.custodian.clientId }}"
+        - name: "APPLICATIONCHECKLIST__CUSTODIAN__CLIENTSECRET"
           valueFrom:
             secretKeyRef:
               name: "{{ .Values.backend.interfaces.secret }}"
               key: "custodian-client-secret"
-        - name: "CHECKLIST__CUSTODIAN__GRANTTYPE"
-          value: "{{ .Values.backend.checklistworker.custodian.grantType }}"
-        - name: "CHECKLIST__CUSTODIAN__KEYCLOAKTOKENADDRESS"
+        - name: "APPLICATIONCHECKLIST__CUSTODIAN__GRANTTYPE"
+          value: "{{ .Values.backend.processesworker.custodian.grantType }}"
+        - name: "APPLICATIONCHECKLIST__CUSTODIAN__KEYCLOAKTOKENADDRESS"
           value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
-        - name: "CHECKLIST__CUSTODIAN__PASSWORD"
+        - name: "APPLICATIONCHECKLIST__CUSTODIAN__PASSWORD"
           value: "{{ .Values.backend.placeholder }}"
-        - name: "CHECKLIST__CUSTODIAN__SCOPE"
-          value: "{{ .Values.backend.checklistworker.custodian.scope }}"
-        - name: "CHECKLIST__CUSTODIAN__USERNAME"
+        - name: "APPLICATIONCHECKLIST__CUSTODIAN__SCOPE"
+          value: "{{ .Values.backend.processesworker.custodian.scope }}"
+        - name: "APPLICATIONCHECKLIST__CUSTODIAN__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
-        - name: "CHECKLIST__SDFACTORY__CLIENTID"
-          value: "{{ .Values.backend.checklistworker.sdfactory.clientId }}"
-        - name: "CHECKLIST__SDFACTORY__CLIENTSECRET"
+        - name: "APPLICATIONCHECKLIST__SDFACTORY__CLIENTID"
+          value: "{{ .Values.backend.processesworker.sdfactory.clientId }}"
+        - name: "APPLICATIONCHECKLIST__SDFACTORY__CLIENTSECRET"
           valueFrom:
             secretKeyRef:
               name: "{{ .Values.backend.interfaces.secret }}"
               key: "sdfactory-client-secret"
-        - name: "CHECKLIST__SDFACTORY__GRANTTYPE"
-          value: "{{ .Values.backend.checklistworker.sdfactory.grantType }}"
-        - name: "CHECKLIST__SDFACTORY__KEYCLOAKTOKENADDRESS"
+        - name: "APPLICATIONCHECKLIST__SDFACTORY__GRANTTYPE"
+          value: "{{ .Values.backend.processesworker.sdfactory.grantType }}"
+        - name: "APPLICATIONCHECKLIST__SDFACTORY__KEYCLOAKTOKENADDRESS"
           value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
-        - name: "CHECKLIST__SDFACTORY__PASSWORD"
+        - name: "APPLICATIONCHECKLIST__SDFACTORY__PASSWORD"
           value: "{{ .Values.backend.placeholder }}"
-        - name: "CHECKLIST__SDFACTORY__SCOPE"
-          value: "{{ .Values.backend.checklistworker.sdfactory.scope }}"
-        - name: "CHECKLIST__SDFACTORY__SDFACTORYISSUERBPN"
-          value: "{{ .Values.backend.checklistworker.sdfactory.issuerBpn }}"
-        - name: "CHECKLIST__SDFACTORY__SDFACTORYURL"
-          value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.checklistworker.sdfactory.selfdescriptionPath }}"
-        - name: "CHECKLIST__SDFACTORY__USERNAME"
+        - name: "APPLICATIONCHECKLIST__SDFACTORY__SCOPE"
+          value: "{{ .Values.backend.processesworker.sdfactory.scope }}"
+        - name: "APPLICATIONCHECKLIST__SDFACTORY__SDFACTORYISSUERBPN"
+          value: "{{ .Values.backend.processesworker.sdfactory.issuerBpn }}"
+        - name: "APPLICATIONCHECKLIST__SDFACTORY__SDFACTORYURL"
+          value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.processesworker.sdfactory.selfdescriptionPath }}"
+        - name: "APPLICATIONCHECKLIST__SDFACTORY__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
         - name: "CONNECTORS__VALIDCERTIFICATIONCONTENTTYPES__0"
           value: "{{ .Values.backend.administration.connectors.validCertificationContentTypes.type0 }}"
@@ -200,6 +200,15 @@ spec:
           value: "True"
         - name: "Document__FRAMEDOCUMENTTYPEIDS__0"
           value: "{{ .Values.backend.administration.frameDocumentTypeIds.type0 }}"
+        - name: "HEALTHCHECKS__0__PATH"
+          value: "{{ .Values.backend.healthChecks.startup.path}}"
+        {{- if .Values.backend.administration.healthChecks.startup.tags }}
+        {{- toYaml .Values.backend.administration.healthChecks.startup.tags | nindent 8 }}
+        {{- end }}
+        - name: "HEALTHCHECKS__1__PATH"
+          value: "{{ .Values.backend.healthChecks.readyness.path}}"
+        - name: "HEALTHCHECKS__2__PATH"
+          value: "{{ .Values.backend.healthChecks.liveness.path}}"
         - name: "IDENTITYPROVIDERADMIN__CSVSETTINGS__CHARSET"
           value: "{{ .Values.backend.administration.identityProviderAdmin.csvSettings.charset }}"
         - name: "IDENTITYPROVIDERADMIN__CSVSETTINGS__CONTENTTYPE"
@@ -304,8 +313,6 @@ spec:
           value: "{{ .Values.backend.provisioning.sharedRealmClient.clientId }}"
         - name: "REGISTRATION__DOCUMENTTYPEIDS__0"
           value: "{{ .Values.backend.administration.registration.documentTypeIds.type0 }}"
-        - name: "REGISTRATION__PARTNERUSERINITIALROLES__Cl1-CX-Registration__0"
-          value: "{{ .Values.backend.administration.registration.partnerUserInitialRoles.role0 }}"
         - name: "SERVICEACCOUNT__CLIENTID"
           value: "{{ .Values.backend.administration.serviceAccount.clientId }}"
         - name: "SWAGGERENABLED"
@@ -314,6 +321,10 @@ spec:
           value: "{{ .Values.backend.administration.userManagement.companyUserStatusIds.status0 }}"
         - name: "USERMANAGEMENT__COMPANYUSERSTATUSIDS__1"
           value: "{{ .Values.backend.administration.userManagement.companyUserStatusIds.status1 }}"
+        - name: "USERMANAGEMENT__USERADMINROLES__Cl2-CX-Portal__0"
+          value: "{{ .Values.backend.administration.userManagement.userAdminRoles.role0 }}"
+        - name: "USERMANAGEMENT__USERADMINROLES__Cl2-CX-Portal__1"
+          value: "{{ .Values.backend.administration.userManagement.userAdminRoles.role1 }}"
         - name: "USERMANAGEMENT__PORTAL__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
         - name: "USERMANAGEMENT__PORTAL__KEYCLOAKCLIENTID"
@@ -322,6 +333,36 @@ spec:
         - name: http
           containerPort: {{ .Values.portContainer }}
           protocol: TCP
+        startupProbe:
+          httpGet:
+            path: {{ .Values.backend.healthChecks.startup.path }}
+            port: {{ .Values.portContainer }}
+            scheme: HTTP
+          initialDelaySeconds: {{ .Values.startupProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.startupProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.startupProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.startupProbe.successThreshold }}
+          failureThreshold: {{ .Values.startupProbe.failureThreshold }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.backend.healthChecks.liveness.path }}
+            port: {{ .Values.portContainer }}
+            scheme: HTTP
+          initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.livenessProbe.successThreshold }}
+          failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.backend.healthChecks.readyness.path }}
+            port: {{ .Values.portContainer }}
+            scheme: HTTP
+          initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.readinessProbe.successThreshold }}
+          failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
