--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -72,6 +72,15 @@ spec:
         - name: "CONNECTIONSTRINGS__PROVISIONINGDB"
           value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
         {{- end }}
+        - name: "HEALTHCHECKS__0__PATH"
+          value: "{{ .Values.backend.healthChecks.startup.path}}"
+        {{- if .Values.backend.services.healthChecks.startup.tags }}
+        {{- toYaml .Values.backend.services.healthChecks.startup.tags | nindent 8 }}
+        {{- end }}
+        - name: "HEALTHCHECKS__1__PATH"
+          value: "{{ .Values.backend.healthChecks.readyness.path}}"
+        - name: "HEALTHCHECKS__2__PATH"
+          value: "{{ .Values.backend.healthChecks.liveness.path}}"
         - name: "JWTBEAREROPTIONS__METADATAADDRESS"
           value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDAUDIENCE"
@@ -131,10 +140,14 @@ spec:
           value: "{{ .Values.portalAddress }}{{ .Values.backend.userManagementPath }}"
         - name: "SERVICES__CATENAADMINROLES__Cl2-CX-Portal__0"
           value: "{{ .Values.backend.services.catenaAdminRoles.role0 }}"
-        - name: "SERVICES__CONTENTTYPESETTINGS__0"
-          value: "{{ .Values.backend.services.contentTypeSettings.setting0 }}"
-        - name: "SERVICES__DOCUMENTTYPEIDS__0"
-          value: "{{ .Values.backend.services.documentTypeIds.type0 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__ADDITIONAL_DETAILS__0"
+          value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.setting0 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__SERVICE_LEADIMAGE__0"
+          value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.setting1 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__SERVICE_LEADIMAGE__1"
+          value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.setting2 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__SERVICE_LEADIMAGE__2"
+          value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.setting3 }}"
         - name: "SERVICES__ITADMINROLES__Cl2-CX-Portal__0"
           value: "{{ .Values.backend.services.ITAdminRoles.role0 }}"
         - name: "SERVICES__SALESMANAGERROLES__Cl2-CX-Portal__0"
@@ -163,10 +176,44 @@ spec:
           value: "{{ .Values.backend.services.deleteDocumentTypeIds.type0 }}"
         - name: "SERVICES__DELETEDOCUMENTTYPEIDS__1"
           value: "{{ .Values.backend.services.deleteDocumentTypeIds.type1 }}"
+        - name: "SERVICES__TECHNICALUSERPROFILECLIENT"
+          value: "{{ .Values.backend.services.technicalUserProfileClient }}"
+        - name: "SERVICES__COMPANYADMINROLES__Cl2-CX-Portal__0"
+          value: "{{ .Values.backend.services.companyAdminRoles.role0 }}"
         ports:
         - name: http
           containerPort: {{ .Values.portContainer }}
           protocol: TCP
+        startupProbe:
+          httpGet:
+            path: {{ .Values.backend.healthChecks.startup.path }}
+            port: {{ .Values.portContainer }}
+            scheme: HTTP
+          initialDelaySeconds: {{ .Values.startupProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.startupProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.startupProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.startupProbe.successThreshold }}
+          failureThreshold: {{ .Values.startupProbe.failureThreshold }}
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.backend.healthChecks.liveness.path }}
+            port: {{ .Values.portContainer }}
+            scheme: HTTP
+          initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.livenessProbe.successThreshold }}
+          failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
+        readinessProbe:
+          httpGet:
+            path: {{ .Values.backend.healthChecks.readyness.path }}
+            port: {{ .Values.portContainer }}
+            scheme: HTTP
+          initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.readinessProbe.successThreshold }}
+          failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
